src/objects/Internal_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Company facing content</description>
    <fields>
        <fullName>Article__c</fullName>
        <label>Article</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_4__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feed_Priority__c</fullName>
        <description>Set the priority of the article in the feed from 0 being no priority to 5 being highest priority.
Priority of 5 will send and email to the team and pop a notification in the tool belt and rank at position 1
Priority of 4 will only pop a notification in the tool belt and rank at position 1
Priority of 3 No notifications and rank at position 1
Priority of 2 No notifications and rank at position 2
Priority of 1 No notifications and rank at position 3</description>
        <label>Feed Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IKM_ID__c</fullName>
        <label>IKM ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_in_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will add this article in the tool belt</description>
        <inlineHelpText>This will add this article in the tool belt</inlineHelpText>
        <label>Show in Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Work Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Work Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete Article</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <inlineHelpText>If applicable, specify the third party that this article is about.</inlineHelpText>
        <label>Third Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Internal Article</label>
    <pluralLabel>Internal Articles</pluralLabel>
</CustomObject>